--- a/batch_training/Teacher&Student_Batch_18.ipynb
+++ b/batch_training/Teacher&Student_Batch_18.ipynb
@@ -37,8 +37,31 @@
         "outputId": "0eea16de-eacc-4867-8680-724df85874bd"
       },
       "source": [
+        "\n",
+        "!pip install rarfile\n",
+        "\n",
         "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
+        "import rarfile\n",
+        "import os\n",
+        "\n",
+        "# Mount Google Drive\n",
+        "drive.mount('/content/drive')\n",
+        "\n",
+        "# Path to the .rar file in Google Drive\n",
+        "rar_path = '/content/drive/MyDrive/computer_vision/main_data_croped.rar'\n",
+        "\n",
+        "# Destination folder to extract the contents\n",
+        "destination_folder = '/content'\n",
+        "\n",
+        "# Create the destination folder if it doesn't exist\n",
+        "if not os.path.exists(destination_folder):\n",
+        "    os.makedirs(destination_folder)\n",
+        "\n",
+        "# Extract the .rar file\n",
+        "with rarfile.RarFile(rar_path, 'r') as rar_ref:\n",
+        "    rar_ref.extractall(destination_folder)\n",
+        "\n",
+        "print(\"Extraction completed.\")"
       ],
       "execution_count": null,
       "outputs": [
@@ -53,26 +76,67 @@
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "RCL8vmU8vOf_",
-        "outputId": "3f5d3f19-721f-4c6d-ae77-1d5ca35b940c"
-      },
       "source": [
-        "!ls"
+        "import os\n",
+        "import csv\n",
+        "import shutil\n",
+        "\n",
+        "def partition_images(directory, csv_file, output_folder):\n",
+        "    image_files = []\n",
+        "    folder_counts = {}  # Dictionary to store the count of images moved to each folder\n",
+        "\n",
+        "    # Read the CSV file\n",
+        "    with open(csv_file, 'r') as file:\n",
+        "        reader = csv.reader(file)\n",
+        "        header = next(reader, None)  # Skip the header row if it exists\n",
+        "\n",
+        "        # Iterate over the rows in the CSV file\n",
+        "        for row in reader:\n",
+        "            image_file = row[0]  # Assuming the image file names are in the first column\n",
+        "            label = row[1]  # Assuming the labels are in the second column\n",
+        "            image_files.append((image_file, label))\n",
+        "\n",
+        "    # Create directories for each label\n",
+        "    labels = set(label for _, label in image_files)\n",
+        "    for label in labels:\n",
+        "        label_dir = os.path.join(output_folder, label)\n",
+        "        os.makedirs(label_dir, exist_ok=True)\n",
+        "        folder_counts[label] = 0  # Initialize the count to 0\n",
+        "\n",
+        "    # Move the image files to separate label directories\n",
+        "    for image_file, label in image_files:\n",
+        "        source_path = os.path.join(directory, image_file + \".jpg\")  # Assuming the file extension is '.jpg'\n",
+        "        destination_path = os.path.join(output_folder, label, image_file + \".jpg\")\n",
+        "\n",
+        "        if os.path.exists(source_path):\n",
+        "            print(f\"Moving {source_path} to {destination_path}\")\n",
+        "            shutil.move(source_path, destination_path)\n",
+        "            folder_counts[label] += 1  # Increment the count for the corresponding folder\n",
+        "\n",
+        "        else:\n",
+        "            print(f\"File not found: {source_path}\")\n",
+        "\n",
+        "    # Print the counts for each folder\n",
+        "    print(\"\\nNumber of images moved in each folder:\")\n",
+        "    for label, count in folder_counts.items():\n",
+        "        print(f\"{label}: {count}\")\n",
+        "\n",
+        "# Directory path where the images and CSV file are located\n",
+        "directory_path = '/content/main_data_croped/'\n",
+        "csv_file_path = '/content/drive/MyDrive/computer_vision/tfti2.csv'\n",
+        "output_folder = \"/content/main_data_croped2/\"\n",
+        "\n",
+        "# Create the output directory if it doesn't exist\n",
+        "os.makedirs(output_folder, exist_ok=True)\n",
+        "\n",
+        "# Call the function to partition the images based on the labels\n",
+        "partition_images(directory_path, csv_file_path, output_folder)"
       ],
+      "metadata": {
+        "id": "6IAZiSGRPsu5"
+      },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "drive  sample_data\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -128,179 +192,80 @@
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ygz1SKZKvYwR",
-        "outputId": "fb8cfcee-9e3b-4eb1-8902-ed0c6ab6c724"
-      },
       "source": [
-        "benign_train = np.load('/content/drive/MyDrive/CSE465/Dataset/benign_train.npy')\n",
-        "malign_train = np.load('/content/drive/MyDrive/CSE465/Dataset/malign_train.npy')\n",
-        "benign_test = np.load('/content/drive/MyDrive/CSE465/Dataset/benign_test.npy')\n",
-        "malign_test = np.load('/content/drive/MyDrive/CSE465/Dataset/malign_test.npy')\n",
-        "print('Done Loaded :)')"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Done Loaded :)\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "VLjanYKivaqF",
-        "outputId": "2a80f418-75d6-44fe-c37b-84afe5dd9c49"
-      },
-      "source": [
-        "# Shape of our dataset\n",
-        "print(f'Benign Train:',benign_train.shape)\n",
-        "print(f'Malignant Train',malign_train.shape)\n",
-        "print(f'Benign Test:',benign_test.shape)\n",
-        "print(f'Malignant Test',malign_test.shape)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Benign Train: (3500, 224, 224, 3)\n",
-            "Malignant Train (3496, 224, 224, 3)\n",
-            "Benign Test: (1500, 224, 224, 3)\n",
-            "Malignant Test (1500, 224, 224, 3)\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "5DNk8wRPZgFl"
-      },
-      "source": [
-        "**Set to class 0 and class 1**"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "IY14E6WpvjuZ"
-      },
-      "source": [
-        "benign_train_label = np.zeros(len(benign_train),dtype=float)\n",
-        "malign_train_label = np.ones(len(malign_train),dtype=float)\n",
-        "benign_test_label = np.zeros(len(benign_test),dtype=float)\n",
-        "malign_test_label = np.ones(len(malign_test),dtype=float)\n",
+        "import os\n",
+        "import numpy as np\n",
+        "from PIL import Image\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from keras.utils import to_categorical\n",
         "\n",
-        "X_train = np.concatenate((benign_train, malign_train), axis = 0)\n",
-        "Y_train = np.concatenate((benign_train_label, malign_train_label), axis = 0)\n",
-        "X_test = np.concatenate((benign_test, malign_test), axis = 0)\n",
-        "Y_test = np.concatenate((benign_test_label, malign_test_label), axis = 0)\n",
+        "train_dir = '/content/main_data_croped2'\n",
+        "\n",
+        "# Load train images\n",
+        "tf_train = []\n",
+        "for filename in os.listdir(os.path.join(train_dir, 'TF')):\n",
+        "    img = Image.open(os.path.join(train_dir, 'TF', filename)).convert('RGB')\n",
+        "    img = img.resize((224, 224))  # Resize if necessary\n",
+        "    img_array = np.array(img)\n",
+        "    tf_train.append(img_array)\n",
+        "tf_train = np.array(tf_train)\n",
+        "\n",
+        "it_train = []\n",
+        "for filename in os.listdir(os.path.join(train_dir, 'TI')):\n",
+        "    img = Image.open(os.path.join(train_dir, 'TI', filename)).convert('RGB')\n",
+        "    img = img.resize((224, 224))  # Resize if necessary\n",
+        "    img_array = np.array(img)\n",
+        "    it_train.append(img_array)\n",
+        "it_train = np.array(it_train)\n",
+        "\n",
+        "normal_train = []\n",
+        "for filename in os.listdir(os.path.join(train_dir, 'normal')):\n",
+        "    img = Image.open(os.path.join(train_dir, 'normal', filename)).convert('RGB')\n",
+        "    img = img.resize((224, 224))  # Resize if necessary\n",
+        "    img_array = np.array(img)\n",
+        "    normal_train.append(img_array)\n",
+        "normal_train = np.array(normal_train)\n",
+        "\n",
+        "print('Done Loaded :)')\n",
+        "\n",
+        "# Shape of our dataset\n",
+        "print(f'TF Train:', tf_train.shape)\n",
+        "print(f'TI Train:', it_train.shape)\n",
+        "print(f'Normal Train:', normal_train.shape)\n",
+        "\n",
+        "tf_train_label = np.zeros(len(tf_train), dtype=float)\n",
+        "it_train_label = np.ones(len(it_train), dtype=float)\n",
+        "normal_train_label = np.full(len(normal_train), 2, dtype=float)\n",
+        "\n",
+        "X_train = np.concatenate((tf_train, it_train, normal_train), axis=0)\n",
+        "Y_train = np.concatenate((tf_train_label, it_train_label, normal_train_label), axis=0)\n",
         "\n",
         "s = np.arange(X_train.shape[0])\n",
         "np.random.shuffle(s)\n",
         "X_train = X_train[s]\n",
         "Y_train = Y_train[s]\n",
         "\n",
-        "s = np.arange(X_test.shape[0])\n",
-        "np.random.shuffle(s)\n",
-        "X_test = X_test[s]\n",
-        "Y_test = Y_test[s]\n",
+        "Y_train = to_categorical(Y_train, num_classes=3)\n",
         "\n",
-        "Y_train = to_categorical(Y_train, num_classes= 2)\n",
-        "Y_test = to_categorical(Y_test, num_classes= 2)"
+        "print(f'X train shape:', X_train.shape)\n",
+        "print(f'Y train shape:', Y_train.shape)\n",
+        "\n",
+        "# Split the data into training, validation, and testing sets\n",
+        "x_train, x_temp, y_train, y_temp = train_test_split(X_train, Y_train, test_size=0.2, random_state=10)\n",
+        "x_val, x_test, y_val, y_test = train_test_split(x_temp, y_temp, test_size=0.5, random_state=10)\n",
+        "\n",
+        "print(f'x train shape:', x_train.shape)\n",
+        "print(f'x test shape:', x_test.shape)\n",
+        "print(f'x val shape:', x_val.shape)\n",
+        "print(f'y train shape:', y_train.shape)\n",
+        "print(f'y test shape:', y_test.shape)\n",
+        "print(f'y val shape:', y_val.shape)"
       ],
+      "metadata": {
+        "id": "CFQf1e1tP5S1"
+      },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "HMPa7P1XfuuN",
-        "outputId": "d63645d3-1aea-42d4-fe22-efbff4036231"
-      },
-      "source": [
-        "print(f'X train shape:',X_train.shape)\n",
-        "print(f'X test shape:',X_test.shape)\n",
-        "print(f'Y train shape:',Y_train.shape)\n",
-        "print(f'Y test shape:',Y_test.shape)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "X train shape: (6996, 224, 224, 3)\n",
-            "X test shape: (3000, 224, 224, 3)\n",
-            "Y train shape: (6996, 2)\n",
-            "Y test shape: (3000, 2)\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "18-dtZkWZfTc"
-      },
-      "source": [
-        "**Split**"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ZUpq1QB1vl-j"
-      },
-      "source": [
-        "x_train, x_val, y_train, y_val = train_test_split(X_train, Y_train, test_size=0.2, random_state=10)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "DyL-RqBfvnfm",
-        "outputId": "10b6e67d-05f9-4ad9-9812-2cd404643a0c"
-      },
-      "source": [
-        "print(f'x train shape:',x_train.shape)\n",
-        "print(f'x val shape:',x_val.shape)\n",
-        "print(f'y train shape:',y_train.shape)\n",
-        "print(f'y val shape:',y_val.shape)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "x train shape: (5596, 224, 224, 3)\n",
-            "x val shape: (1400, 224, 224, 3)\n",
-            "y train shape: (5596, 2)\n",
-            "y val shape: (1400, 2)\n"
-          ]
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -319,7 +284,7 @@
         "  model.add(layers.GlobalAveragePooling2D())\n",
         "  model.add(layers.Dropout(0.5))\n",
         "  model.add(layers.BatchNormalization())\n",
-        "  model.add(layers.Dense(2 , activation='softmax'))\n",
+        "  model.add(layers.Dense(3 , activation='softmax'))\n",
         "\n",
         "  model.compile(\n",
         "        loss='categorical_crossentropy',\n",
@@ -601,7 +566,7 @@
         "\n",
         "start = timeit.default_timer()\n",
         "#Your statements here\n",
-        "y_pred = model.predict(X_test)\n",
+        "y_pred = model.predict(x_test)\n",
         "print(f'My predicted Y_test values are:\\n' ,y_pred)\n",
         "\n",
         "stop = timeit.default_timer()\n",
@@ -641,7 +606,7 @@
         "#Your statements here\n",
         "\n",
         "#Now let's check the accuracy between the original & predicted (Y_test , y_pred)\n",
-        "print(f'My accuracy on Teacher model with ResNet50 on the Test set is:',accuracy_score(np.argmax(Y_test, axis=1), np.argmax(y_pred, axis=1)))\n",
+        "print(f'My accuracy on Teacher model with ResNet50 on the Test set is:',accuracy_score(np.argmax(y_test, axis=1), np.argmax(y_pred, axis=1)))\n",
         "\n",
         "stop = timeit.default_timer()\n",
         "print('\\nTime: ',stop - start,'sec')"
@@ -670,7 +635,7 @@
       },
       "source": [
         "# Classification_report\n",
-        "print(f'Classification Report of Resnet50:\\n',classification_report(np.argmax(Y_test, axis=1), np.argmax(y_pred, axis=1)))"
+        "print(f'Classification Report of Resnet50:\\n',classification_report(np.argmax(y_test, axis=1), np.argmax(y_pred, axis=1)))"
       ],
       "execution_count": null,
       "outputs": [
