--- a/temperature/Temperature_100.ipynb
+++ b/temperature/Temperature_100.ipynb
@@ -37,8 +37,31 @@
         "outputId": "3ed56336-4f70-4481-c73c-113eb20719d4"
       },
       "source": [
+        "\n",
+        "!pip install rarfile\n",
+        "\n",
         "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
+        "import rarfile\n",
+        "import os\n",
+        "\n",
+        "# Mount Google Drive\n",
+        "drive.mount('/content/drive')\n",
+        "\n",
+        "# Path to the .rar file in Google Drive\n",
+        "rar_path = '/content/drive/MyDrive/computer_vision/main_data_croped.rar'\n",
+        "\n",
+        "# Destination folder to extract the contents\n",
+        "destination_folder = '/content'\n",
+        "\n",
+        "# Create the destination folder if it doesn't exist\n",
+        "if not os.path.exists(destination_folder):\n",
+        "    os.makedirs(destination_folder)\n",
+        "\n",
+        "# Extract the .rar file\n",
+        "with rarfile.RarFile(rar_path, 'r') as rar_ref:\n",
+        "    rar_ref.extractall(destination_folder)\n",
+        "\n",
+        "print(\"Extraction completed.\")"
       ],
       "execution_count": null,
       "outputs": [
@@ -53,26 +76,67 @@
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "voTLIdHEtHmw",
-        "outputId": "7f23147f-f66e-4e21-de5c-575b120fdd46"
-      },
       "source": [
-        "ls"
+        "import os\n",
+        "import csv\n",
+        "import shutil\n",
+        "\n",
+        "def partition_images(directory, csv_file, output_folder):\n",
+        "    image_files = []\n",
+        "    folder_counts = {}  # Dictionary to store the count of images moved to each folder\n",
+        "\n",
+        "    # Read the CSV file\n",
+        "    with open(csv_file, 'r') as file:\n",
+        "        reader = csv.reader(file)\n",
+        "        header = next(reader, None)  # Skip the header row if it exists\n",
+        "\n",
+        "        # Iterate over the rows in the CSV file\n",
+        "        for row in reader:\n",
+        "            image_file = row[0]  # Assuming the image file names are in the first column\n",
+        "            label = row[1]  # Assuming the labels are in the second column\n",
+        "            image_files.append((image_file, label))\n",
+        "\n",
+        "    # Create directories for each label\n",
+        "    labels = set(label for _, label in image_files)\n",
+        "    for label in labels:\n",
+        "        label_dir = os.path.join(output_folder, label)\n",
+        "        os.makedirs(label_dir, exist_ok=True)\n",
+        "        folder_counts[label] = 0  # Initialize the count to 0\n",
+        "\n",
+        "    # Move the image files to separate label directories\n",
+        "    for image_file, label in image_files:\n",
+        "        source_path = os.path.join(directory, image_file + \".jpg\")  # Assuming the file extension is '.jpg'\n",
+        "        destination_path = os.path.join(output_folder, label, image_file + \".jpg\")\n",
+        "\n",
+        "        if os.path.exists(source_path):\n",
+        "            print(f\"Moving {source_path} to {destination_path}\")\n",
+        "            shutil.move(source_path, destination_path)\n",
+        "            folder_counts[label] += 1  # Increment the count for the corresponding folder\n",
+        "\n",
+        "        else:\n",
+        "            print(f\"File not found: {source_path}\")\n",
+        "\n",
+        "    # Print the counts for each folder\n",
+        "    print(\"\\nNumber of images moved in each folder:\")\n",
+        "    for label, count in folder_counts.items():\n",
+        "        print(f\"{label}: {count}\")\n",
+        "\n",
+        "# Directory path where the images and CSV file are located\n",
+        "directory_path = '/content/main_data_croped/'\n",
+        "csv_file_path = '/content/drive/MyDrive/computer_vision/tfti2.csv'\n",
+        "output_folder = \"/content/main_data_croped2/\"\n",
+        "\n",
+        "# Create the output directory if it doesn't exist\n",
+        "os.makedirs(output_folder, exist_ok=True)\n",
+        "\n",
+        "# Call the function to partition the images based on the labels\n",
+        "partition_images(directory_path, csv_file_path, output_folder)"
       ],
+      "metadata": {
+        "id": "51dWADmWa3B2"
+      },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "\u001b[0m\u001b[01;34mdrive\u001b[0m/  \u001b[01;34msample_data\u001b[0m/\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -129,132 +193,80 @@
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "DoxPpGtptS2_",
-        "outputId": "e05d0336-3c01-47f1-bf42-4d951992e619"
-      },
       "source": [
-        "benign_train = np.load('/content/drive/MyDrive/CSE465/benign_train.npy')\n",
-        "malign_train = np.load('/content/drive/MyDrive/CSE465/malign_train.npy')\n",
-        "benign_test = np.load('/content/drive/MyDrive/CSE465/benign_test.npy')\n",
-        "malign_test = np.load('/content/drive/MyDrive/CSE465/malign_test.npy')\n",
-        "print('Done Loaded :)')"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Done Loaded :)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "-kJIL2Yitj-r",
-        "outputId": "3b29db4f-f33b-48b3-e2d5-3089e699022b"
-      },
-      "source": [
-        "#Shape of our dataset\n",
-        "print(f'Benign Train:',benign_train.shape)\n",
-        "print(f'Malignant Train',malign_train.shape)\n",
-        "print(f'Benign Test:',benign_test.shape)\n",
-        "print(f'Malignant Test',malign_test.shape)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Benign Train: (3500, 224, 224, 3)\n",
-            "Malignant Train (3496, 224, 224, 3)\n",
-            "Benign Test: (1500, 224, 224, 3)\n",
-            "Malignant Test (1500, 224, 224, 3)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "QL3kGz_gtn45"
-      },
-      "source": [
-        "benign_train_label = np.zeros(len(benign_train),dtype=float)\n",
-        "malign_train_label = np.ones(len(malign_train),dtype=float)\n",
-        "benign_test_label = np.zeros(len(benign_test),dtype=float)\n",
-        "malign_test_label = np.ones(len(malign_test),dtype=float)\n",
+        "import os\n",
+        "import numpy as np\n",
+        "from PIL import Image\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from keras.utils import to_categorical\n",
         "\n",
-        "X_train = np.concatenate((benign_train, malign_train), axis = 0)\n",
-        "Y_train = np.concatenate((benign_train_label, malign_train_label), axis = 0)\n",
-        "X_test = np.concatenate((benign_test, malign_test), axis = 0)\n",
-        "Y_test = np.concatenate((benign_test_label, malign_test_label), axis = 0)\n",
+        "train_dir = '/content/main_data_croped2'\n",
+        "\n",
+        "# Load train images\n",
+        "tf_train = []\n",
+        "for filename in os.listdir(os.path.join(train_dir, 'TF')):\n",
+        "    img = Image.open(os.path.join(train_dir, 'TF', filename)).convert('RGB')\n",
+        "    img = img.resize((224, 224))  # Resize if necessary\n",
+        "    img_array = np.array(img)\n",
+        "    tf_train.append(img_array)\n",
+        "tf_train = np.array(tf_train)\n",
+        "\n",
+        "it_train = []\n",
+        "for filename in os.listdir(os.path.join(train_dir, 'TI')):\n",
+        "    img = Image.open(os.path.join(train_dir, 'TI', filename)).convert('RGB')\n",
+        "    img = img.resize((224, 224))  # Resize if necessary\n",
+        "    img_array = np.array(img)\n",
+        "    it_train.append(img_array)\n",
+        "it_train = np.array(it_train)\n",
+        "\n",
+        "normal_train = []\n",
+        "for filename in os.listdir(os.path.join(train_dir, 'normal')):\n",
+        "    img = Image.open(os.path.join(train_dir, 'normal', filename)).convert('RGB')\n",
+        "    img = img.resize((224, 224))  # Resize if necessary\n",
+        "    img_array = np.array(img)\n",
+        "    normal_train.append(img_array)\n",
+        "normal_train = np.array(normal_train)\n",
+        "\n",
+        "print('Done Loaded :)')\n",
+        "\n",
+        "# Shape of our dataset\n",
+        "print(f'TF Train:', tf_train.shape)\n",
+        "print(f'TI Train:', it_train.shape)\n",
+        "print(f'Normal Train:', normal_train.shape)\n",
+        "\n",
+        "tf_train_label = np.zeros(len(tf_train), dtype=float)\n",
+        "it_train_label = np.ones(len(it_train), dtype=float)\n",
+        "normal_train_label = np.full(len(normal_train), 2, dtype=float)\n",
+        "\n",
+        "X_train = np.concatenate((tf_train, it_train, normal_train), axis=0)\n",
+        "Y_train = np.concatenate((tf_train_label, it_train_label, normal_train_label), axis=0)\n",
         "\n",
         "s = np.arange(X_train.shape[0])\n",
         "np.random.shuffle(s)\n",
         "X_train = X_train[s]\n",
         "Y_train = Y_train[s]\n",
         "\n",
-        "s = np.arange(X_test.shape[0])\n",
-        "np.random.shuffle(s)\n",
-        "X_test = X_test[s]\n",
-        "Y_test = Y_test[s]\n",
+        "Y_train = to_categorical(Y_train, num_classes=3)\n",
         "\n",
-        "Y_train = to_categorical(Y_train, num_classes= 2)\n",
-        "Y_test = to_categorical(Y_test, num_classes= 2)"
+        "print(f'X train shape:', X_train.shape)\n",
+        "print(f'Y train shape:', Y_train.shape)\n",
+        "\n",
+        "# Split the data into training, validation, and testing sets\n",
+        "x_train, x_temp, y_train, y_temp = train_test_split(X_train, Y_train, test_size=0.2, random_state=10)\n",
+        "x_val, x_test, y_val, y_test = train_test_split(x_temp, y_temp, test_size=0.5, random_state=10)\n",
+        "\n",
+        "print(f'x train shape:', x_train.shape)\n",
+        "print(f'x test shape:', x_test.shape)\n",
+        "print(f'x val shape:', x_val.shape)\n",
+        "print(f'y train shape:', y_train.shape)\n",
+        "print(f'y test shape:', y_test.shape)\n",
+        "print(f'y val shape:', y_val.shape)"
       ],
+      "metadata": {
+        "id": "yBZL5ckha6NJ"
+      },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "_xiFYpzktpos"
-      },
-      "source": [
-        "x_train, x_val, y_train, y_val = train_test_split(X_train, Y_train, test_size=0.2, random_state=10)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Su10U8OItq8x",
-        "outputId": "e927715b-cff4-4e89-e59f-13eecdffdd5b"
-      },
-      "source": [
-        "print(f'x train shape:',x_train.shape)\n",
-        "print(f'x val shape:',x_val.shape)\n",
-        "print(f'y train shape:',y_train.shape)\n",
-        "print(f'y val shape:',y_val.shape)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "x train shape: (5596, 224, 224, 3)\n",
-            "x val shape: (1400, 224, 224, 3)\n",
-            "y train shape: (5596, 2)\n",
-            "y val shape: (1400, 2)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -273,7 +285,7 @@
         "  model.add(layers.GlobalAveragePooling2D())\n",
         "  model.add(layers.Dropout(0.5))\n",
         "  model.add(layers.BatchNormalization())\n",
-        "  model.add(layers.Dense(2 , activation='softmax'))\n",
+        "  model.add(layers.Dense(3 , activation='softmax'))\n",
         "\n",
         "  model.compile(\n",
         "        loss='categorical_crossentropy',\n",
